# jupyter_migration_demo

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
notebooks/: titanic-logistic-regression-with-python.ipynb
tests/: conftest.py
tests/data/titanic_python/: final_test.pickle  final_train.pickle  raw_test_df.pickle  raw_train_df.pickle  train_data1.pickle  train_data2.pickle
tests/titanic_python/: test_titanic.py  test_utils.py
titanic_python/: titanic.py  utils.py
